--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.15.4",
     "material-ui": "^0.18.7",
     "materialize-css": "^0.100.1",
     "react": "^15.6.1",
