--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "material-ui": "^0.18.7",
+    "material-ui": "^0.19.0",
     "materialize-css": "^0.100.1",
+    "mongoose": "^4.11.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
     "react-scripts": "1.0.11",
     "react-tap-event-plugin": "^2.0.1"
