--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "express": "^4.15.4",
     "material-ui": "^0.19.0",
     "materialize-css": "^0.100.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
     "react-scripts": "1.0.11",
     "react-tap-event-plugin": "^2.0.1"
