--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.19.0",
     "materialize-css": "^0.100.1",
     "moment": "^2.18.1",
